hphp/test/zend/good/Zend/tests/traits/error_016.php.expectf

Fatal error: Traits cannot have constants in %s/error_016.php on line 4
